--- a/Refractor/Develop/index.html
+++ b/Refractor/Develop/index.html
@@ -48,7 +48,7 @@
             </p>
         </section>
     </main>
-    <aside class="benefits">
+    <aside id="benefits">
         <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="this is a description of the image" />
